--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('img/bg5.png');
+  background-image: url('img/bg5.jpg');
   background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
