--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ p {
     }
 footer{
   font-size: 0.7rem;
-  text-align: right;
+  text-align: center;
   padding-top: 3rem;
   color: #80B1FF;
 }
